--- a/src/app/App.css
+++ b/src/app/App.css
@@ -15,13 +15,24 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 50vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Crap-header {
+  background-color: #8f1d85;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: unset; /* makes the logo look totally awful and huge*/
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(29, 35, 117);
 }
 
 .App-link {
